fix: spacing betwen product summary shelf

--- a/app/styles/PLP.scss
+++ b/app/styles/PLP.scss
@@ -16,7 +16,7 @@
     gap: 30px 5%;
     width: 100%;
     @include mobile__800{
-        gap: 30px;
+        gap: 20px 10px;
     }
 }
 
@@ -27,7 +27,7 @@
     border: 1px solid #cecece;
     box-shadow: 1px 4px 12px -4px rgb(0, 0, 0, .2);
     @include mobile__800{
-        width: calc(50% - 15px);
+        width: calc(50% - 5px);
     }
 }
 
